--- a/CV/thankyou.html
+++ b/CV/thankyou.html
@@ -9,7 +9,7 @@
     <h1>Thank You for Your Message!</h1>
     <p>I appreciate you reaching out. Your message has been successfully submitted, and I will get back to you shortly.</p>
     <p>
-        <a href="index.html">Return to Home Page</a> | 
+        <a href="index.html">Return to Home Page</a>
         <a href="contact.html">Return to Contact Page</a>
     </p>
 </body>
