--- a/CV/index.html
+++ b/CV/index.html
@@ -10,7 +10,7 @@
     <!--Navigation-->
     <nav>
         <p>Doruk Beduk</p>
-        <p><a href="contact.html">Contact Doruk Beduk</a></p>
+        <a href="contact.html">Contact Doruk Beduk</a>
     </nav>
     <section>
         <h1>Doruk Beduk</h1>
@@ -28,7 +28,6 @@
             teams and deliver customized solutions that meet diverse business needs.
         </p>
     </section>
-
     <hr>
 
     <section>
@@ -51,12 +50,12 @@
 
     <section>
         <h2>Skills</h2>
-        <ul>
-            <li>Programming Languages: Python (proficient), Java (experienced), C (experienced)</li>
-            <li>Systems & Networking: Linux, UNIX, Mac OS, Windows; Virtualization, Networking protocols</li>
-            <li>Business & Data: MS Office, Tableau, Power BI, Data Science with Python, Database Management</li>
-            <li>Languages: Fully fluent in English and Turkish</li>
-        </ul>
+        <dl>
+            <dd>&bull; Programming Languages: Python (proficient), Java (experienced), C (experienced)</dd>
+            <dd>&bull; Systems & Networking: Linux, UNIX, Mac OS, Windows; Virtualization, Networking protocols</dd>
+            <dd>&bull; Business & Data: MS Office, Tableau, Power BI, Data Science with Python, Database Management</dd>
+            <dd>&bull; Languages: Fully fluent in English and Turkish</dd>
+        </dl>
     </section>
 
     <section>
@@ -106,6 +105,19 @@
                 The tool enabled efficient searching, retrieving, and managing of policies, which significantly streamlined operations. 
             <li>By automating these processes, the tool boosted operational efficiency by 150 times, 
                 reducing manual workload and improving accuracy in policy management.</li>
+        </ul>
+
+        <h3>Computational Investing</h3>
+        <ul>
+            <li>The Election Forecasting Dashboard is an interactive Python-based tool that analyzes sector performance trends (2003–2024) 
+                and explores the impact of U.S. presidential election outcomes on financial markets.</li>
+            <li>Regular Analysis: Provides insights into yearly trends, top-performing sectors, sector correlations, 
+                and performance differences under Democratic and Republican presidencies.</li>
+            <li>Advanced Analysis: Allows users to forecast sector prices up to 4 years into the future, 
+                month-by-month, for both political scenarios.</li>
+            <li>Purpose: Combines data analytics, visualization, and forecasting to help users make informed 
+                decisions about sector performance and political impacts.</li>
+
         </ul>
     </section>
 
