--- a/CV/index.html
+++ b/CV/index.html
@@ -123,7 +123,7 @@
 
     <footer>
         <p>
-            <a href="index.html"> &copy; Doruk Beduk </a> &#8226;
+            <a href="contact.html"> &copy; Doruk Beduk </a> &#8226;
             <a href="https://www.linkedin.com/in/dorukbeduk/"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a>
         </p>
     </footer>
