changes were madeeeeee

--- a/CV/index.html
+++ b/CV/index.html
@@ -13,7 +13,7 @@
         <p>Doruk Beduk</p>
         <a href="contact.html">Contact Doruk Beduk</a>
     </nav>
-    <section>
+    <section class="splash">
         <h1>Doruk Beduk</h1>
         <img src="Images/IMG_7078.jpg" alt="Doruk_Headshot" style="width: 100px;height: 140px;">
         <p>
@@ -29,8 +29,8 @@
             teams and deliver customized solutions that meet diverse business needs.
         </p>
     </section>
-    <hr>
 
+    
     <section>
         <h2>Education</h2>
             <p>University of Georgia, Computer Science, 
