--- a/CV/contact.html
+++ b/CV/contact.html
@@ -19,7 +19,7 @@
     </section>
     
     <hr>
-
+    <section>
     <form action="http://127.0.0.1:5500/CV/thankyou.html" method="post">
         <!-- Redirect to thankyou.html after submission -->
         <input type="hidden" name="_redirect" value="thankyou.html">
@@ -32,13 +32,16 @@
         <textarea id="message" name="message" style="width:300px;height:100px;"></textarea>
         <button type="submit">Submit</button>
     </form>
+    </section>
 
+    <section>
     <footer>
         <p>
             <a href="index.html"> &copy; Doruk Beduk </a> &#8226;
             <a href="https://www.linkedin.com/in/dorukbeduk/"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a>
         </p>
     </footer>
+    </section>
 
 </body>
 </html>
