css to horizontal rule

--- a/CV/index.html
+++ b/CV/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
     <title>Doruk Beduk</title>
 </head>
 <body>
@@ -30,7 +33,7 @@
         </p>
     </section>
 
-    
+
     <section>
         <h2>Education</h2>
             <p>University of Georgia, Computer Science, 
