some css changes

--- a/CV/index.html
+++ b/CV/index.html
@@ -36,10 +36,13 @@
 
     <section>
         <h2>Education</h2>
-            <p>University of Georgia, Computer Science, 
+            <p><b>University of Georgia,</b> Computer Science, 
                 School of Computing, Franklin College of Arts & Sciences, 
-                Bachelor of Science in Computer Science May 2025, GPA: 4.0, 
-                Courses: Computer Architecture, Systems Programming, 
+                Bachelor of Science in Computer Science, <b>May 2025</b></p>
+                
+            <p><b>GPA:</b> 4.0</p>
+
+            <p><b>Courses:</b> Computer Architecture, Systems Programming, 
                 Theory of Computation, Web Development, Database Management, 
                 Data Structures & Algorithms</p>
     </section>
