--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <textarea id="message" name="message" placeholder="Your Message"></textarea>
     
             <!-- Use your absolute local URL for the thank-you page -->
-            <input type="hidden" name="_next" value="http://127.0.0.1:5501/CV/thankyou.html">
+            <input type="hidden" name="_next" value="http://127.0.0.1:5501/thankyou.html">
     
             <input type="hidden" name="_subject" value="New Contact Form Submission">
             <input type="hidden" name="_captcha" value="false">
