--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <label for="message">Message: </label>
             <textarea id="message" name="message" placeholder="Your Message"></textarea>
 
-            <input type="hidden" name="_next" value="https://dbedukk.github.io/Web_Development/">
+            <input type="hidden" name="_next" value="https://dbedukk.github.io/Web_Development/thankyou.html">
     
             <input type="hidden" name="_subject" value="New Contact Form Submission">
             <input type="hidden" name="_captcha" value="false">
